Added Company CRUD operation in working format

--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Account/ChangePassword.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Account/ChangePassword.cshtml
@@ -73,7 +73,8 @@
                     required: true
                 },
                 ConfirmNewPassword: {
-                    required: true
+                    required: true,
+                    equalTo: "#NewPassword"
                 }
             },
             messages: {
@@ -85,7 +86,8 @@
                     required: "Please enter New Password"
                 },
                 ConfirmNewPassword: {
-                    required: "Please enter Confirm Password"
+                    required: "Please enter Confirm Password",
+                    equalTo: "Confirm password should match with new password"
                 }
             },
 
