--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Client/GetAll.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Client/GetAll.cshtml
@@ -18,7 +18,7 @@
             foreach (var client in Model)
             {
                 <tr data-empid="@client.RefId">
-                    <td>@client.Name</td>
+                    <td>@client.CompanyName</td>
                     <td>@client.FirstName</td>
                     <td>@client.LastName</td>
                     <td>@client.UserName</td>
