--- a/ExpertOrderManagement/ExpertOrderManagement/Content/css/components.css
+++ b/ExpertOrderManagement/ExpertOrderManagement/Content/css/components.css
@@ -558,18 +558,18 @@
   z-index: 1;
   outline: none !important;
 }
-.checkbox input[type="checkbox"]:disabled + label {
+.checkbox input[type="checkbox"]:disabled ~ label {
   opacity: 0.65;
 }
-.checkbox input[type="checkbox"]:focus + label::before {
+.checkbox input[type="checkbox"]:focus ~ label::before {
   outline-offset: -2px;
   outline: none;
 }
-.checkbox input[type="checkbox"]:checked + label::after {
+.checkbox input[type="checkbox"]:checked ~ label::after {
   content: "\f00c";
   font-family: 'FontAwesome';
 }
-.checkbox input[type="checkbox"]:disabled + label::before {
+.checkbox input[type="checkbox"]:disabled ~ label::before {
   background-color: #eeeeee;
   cursor: not-allowed;
 }
@@ -582,11 +582,11 @@
 .checkbox.checkbox-single label {
   height: 17px;
 }
-.checkbox-primary input[type="checkbox"]:checked + label::before {
+.checkbox-primary input[type="checkbox"]:checked ~ label::before {
   background-color: #6a76fc;
   border-color: #6a76fc;
 }
-.checkbox-primary input[type="checkbox"]:checked + label::after {
+.checkbox-primary input[type="checkbox"]:checked ~ label::after {
   color: #ffffff;
 }
 .checkbox-danger input[type="checkbox"]:checked + label::before {
