--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Shared/_Dashboard.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Shared/_Dashboard.cshtml
@@ -1,6 +1,8 @@
 ﻿
 <!DOCTYPE html>
-
+@{
+    var user = ((BusinessLogic.ClientUser)Session["User"]);
+}
 <html>
 <head>
     <meta charset="utf-8">
@@ -46,7 +48,7 @@
                         <li class="has-submenu">
                             <a href="#"><i class="md md-color-lens"></i>Masters</a>
                             <ul class="submenu">
-                                @if (((BusinessLogic.ClientUser)Session["User"]).UserTypeId == 1)
+                                @if (user.UserTypeId == 1)
                                 {
                                     <li><a href="@Url.Action("Add", "Client", new { ID=0})">Clients</a></li>
                                 }
@@ -55,7 +57,7 @@
                                     <li><a href="@Url.Action("Add", "ProductGroup", new { ID=0})">Product Groups</a></li>
                                     <li><a href="@Url.Action("Add", "Product", new { ID=0})">Products</a></li>
                                     <li><a href="@Url.Action("Add", "Party", new { ID=0})">Party</a></li>
-                                }                                
+                                }
                             </ul>
                         </li>
                         <li class="has-submenu">
@@ -63,6 +65,15 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right pull-right">
+                        @if (user.UserTypeId != 1)
+                        {
+                            <li>
+                                <a href="#">
+                                    @Html.DropDownList("ddlCompanies", new SelectList(user.Client.Companies, "ClientCompanyId", "CompanyName", user.Client.Companies.FirstOrDefault().ClientCompanyId), new { @class = "form-control",@style=" margin-top: 13px;" })
+                            </a>
+                        </li>
+                        }
+
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle waves-effect waves-light profile" data-toggle="dropdown" aria-expanded="true">
                                 <img src="@Url.Content("~/Content/images/users/avatar-1.jpg")" alt="user-img" class="img-circle">
