--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Product/Add.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Product/Add.cshtml
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="hori-pass1" class="col-sm-4 control-label">Service Item</label>
@@ -222,7 +222,7 @@
                         <div class="col-sm-7">
                             @Html.TextBoxFor(x => x.Valuation, new { @class = "form-control", @placeholder = "MRP" })
                         </div>
-                    </div>
+                    </div>*@
                     <div class="form-group">
                         <div class="col-sm-offset-4 col-sm-8">
                             <a href="@Url.Action("Add", "Product", new { ID=0})" i id="btnAdd" type="button" class="btn btn-lg btn-default waves-effect waves-light m-l-5">
