--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Product/GetAll.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Product/GetAll.cshtml
@@ -4,27 +4,31 @@
 <table id="tblProduct" class="table table-striped table-bordered">
     <thead>
         <tr>
-            <th>Code</th>
+            @*<th>Code</th>*@
             <th>Name</th>
-            <th>Category 1</th>
-            <th>Category 2</th>
-            <th>Category 3</th>
-            <th>Parent</th>
+            <th>Group</th>
+            <th>Unit</th>
+            <th>Op. Qty</th>
+            <th>Op. Rate</th>
+            <th>Op. Value</th>
         </tr>
     </thead>
 
     <tbody>
         @if (Model != null)
         {
-            foreach (var group in Model)
+            foreach (var product in Model)
             {
-                <tr data-empid="@group.RefId">
-                    <td>@group.Code</td>
-                    <td>@group.Name</td>
-                    <td>@group.Category1</td>
-                    <td>@group.Category2</td>
+                <tr data-empid="@product.RefId">
+                    @*<td>@group.Code</td>*@
+                    <td>@product.Name</td>
+                    <td>@product.Group</td>
+                    <td>@product.DUnit</td>
+                    <td>@product.Op_Qty</td>
+                    <td>@product.Op_Rate</td>
+                    <td>@product.Op_Value</td>
                     @*<td>@group.Category3</td>
-                    <td>@group.Parent</td>*@
+                        <td>@group.Parent</td>*@
                 </tr>
             }
         }
