--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Order/Add.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Order/Add.cshtml
@@ -309,18 +309,18 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-4 col-sm-8">
-                        <a href="@Url.Action("Add", "Order", new { Id = 0 })" i id="btnAdd" type="button" class="btn btn-lg btn-default waves-effect waves-light m-l-5">
+                        @*<a href="@Url.Action("Add", "Order", new { Id = 0 })" i id="btnAdd" type="button" class="btn btn-lg btn-default waves-effect waves-light m-l-5">
                             <i class="ti-plus"></i>&nbsp;&nbsp;Add
-                        </a>
+                        </a>*@
                         <button id="btnSave" type="submit" class="btn btn-lg btn-primary waves-effect waves-light">
                             <i class="ti-save"></i>&nbsp;&nbsp; Save
                         </button>
-                        <button id="btnDelete" type="button" class="btn btn-lg btn-danger waves-effect waves-light m-l-5">
+                        @*<button id="btnDelete" type="button" class="btn btn-lg btn-danger waves-effect waves-light m-l-5">
                             <i class="ti-trash"></i>&nbsp;&nbsp;Delete
                         </button>
                         <button id="btnView" type="button" class="btn btn-lg btn-warning waves-effect waves-light m-l-5">
                             <i class="ti-search"></i>&nbsp;&nbsp;View
-                        </button>
+                        </button>*@
                     </div>
                 </div>
 
